correct the overlapping ui problem in the books second time

--- a/src/assets/scss/layout/_product.scss
+++ b/src/assets/scss/layout/_product.scss
@@ -174,7 +174,7 @@
     }
 
     &__content {
-        height: 25vh;
+        height: 270x;
         padding: 30px 15px;
         box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
     }
